# HSTCL

./: HSTCL.cabal  Makefile  README
Examples/TclShell/: Main.hs
Examples/Test2/: Main.hs  Main.hs~
Examples/Test3/: Main.hs
Examples/Test4/: Main.hs
Scripting/: HSTCL.chs
