Name: HSTCL
Version: 0.0.1

License:      BSD3 
License-file: LICENSE
Stability:    Experimental
Maintainer:   Joel Svensson<svensson.bj@gmail.com>
Author:       Joel Svensson<svensson.bj@gmail.com>

Copyright:    Copyright (c) 2011 Joel Svensson
Synopsis:     TCL Scripting 
HomePage:     www.cse.chalmers.se/~joels
Description: 
  TCL Scripting


Category: Scripting
Cabal-Version: >= 1.8
Tested-With: GHC == 7.0.3

build-type: Simple

Library
  build-depends: base >= 4 && < 5, haskell98
              
  exposed-modules: Scripting.HSTCL

  GHC-Options: 